--- a/composer.json
+++ b/composer.json
@@ -4,9 +4,7 @@
   "type": "akyos-bundle",
   "require": {
     "php": ">=8.1",
-    "ext-json": "*",
-    "wordplate/acf": "*",
-    "roots/acorn": "^2.0"
+    "ext-json": "*"
   },
   "license": "proprietary",
   "authors": [
