--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,24 @@
-vendor/
-.DS_Store
+# Dependencies
+node_modules/
+
+# Build output
+dist/
+
+# Environment files
+.env
+.env.local
+.env.*.local
+
+# IDE files
+.vscode/
 .idea/
-composer.lock
-composer.phar
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# Logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
